[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/star_requirements/star_requirements.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/input_mode/input_mode.tscn" type="PackedScene" id=2]
[ext_resource path="res://environments/default_sky.tres" type="ProceduralSky" id=3]
[ext_resource path="res://prefabs/balls/red_ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/zoom_level/zoom_level.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/frame_rate_label.gd" type="Script" id=6]
[ext_resource path="res://prefabs/actors/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/level_complete_overlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/clubs/blue/club_blue.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/level.gd" type="Script" id=10]
[ext_resource path="res://ui/power_bar/power_bar.tscn" type="PackedScene" id=12]

[sub_resource type="Environment" id=1]
background_mode = 3
background_sky = ExtResource( 3 )
background_color = Color( 0.113725, 0.113725, 0.137255, 1 )
tonemap_mode = 2

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/kenney_future.ttf"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Complete"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/LevelCompleteOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LevelBase" type="Spatial"]
script = ExtResource( 10 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, -8 )

[node name="Camera_Container" parent="Player" index="0"]
transform = Transform( -0.627243, 0, -0.778824, 0, 1, 0, 0.778824, 0, -0.627243, 0, 0, 0 )

[node name="Rotation_Helper" parent="Player/Camera_Container" index="0"]
transform = Transform( 1, 0, 0, 0, 0.806362, 0.591422, 0, -0.591422, 0.806362, 0, 0, 0 )

[node name="Camera" parent="Player/Camera_Container/Rotation_Helper" index="0"]
fov = 80.6

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CameraModeLabel" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 38.5975
margin_top = 36.0
margin_right = 293.598
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Camera: Free View
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameRateLabel" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 38.5975
margin_top = 71.1617
margin_right = 293.598
margin_bottom = 120.162
custom_fonts/font = SubResource( 3 )
text = "FPS: 1337
"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCompleteOverlay" parent="CanvasLayer" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0 )

[node name="Club" parent="." instance=ExtResource( 9 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.131209, 3.55406, -7.34507 )
ball_path = NodePath("../Ball")

[node name="Ball" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0173099, 0.206409, -7.0222 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Complete = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 0.5
margin_left = 50.0
margin_top = 50.0
margin_bottom = 90.0
custom_constants/separation = -10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarRequirements" parent="." instance=ExtResource( 1 )]

[node name="PowerBar" parent="." instance=ExtResource( 12 )]

[node name="ZoomLevel" parent="." instance=ExtResource( 5 )]

[node name="InputMode" parent="." instance=ExtResource( 2 )]
[connection signal="input_mode_changed" from="Player" to="InputMode" method="_on_Player_input_mode_changed"]
[connection signal="input_mode_changed" from="Player" to="." method="_on_Player_input_mode_changed"]
[connection signal="reset" from="Club" to="PowerBar" method="reset"]
[connection signal="ball_stopped" from="Ball" to="Club" method="_on_ball_stopped"]
[connection signal="power_set" from="PowerBar" to="Club" method="swing"]
[connection signal="level_changed" from="ZoomLevel" to="Player" method="_on_ZoomLevel_level_changed"]

[editable path="Player"]
